courses/430_programming-languages/assignment-6/tests/error/hw5_error11.correct
cannot return value of type 'bool' from function declared with type '(int -> int)'
